# samp-sha256

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: SHA256.inc
src/: build-number.h  main.cpp
